Release 1.1.2 Start 10/10/2021 End --/--/20--
======= Release Highlights ================================================
===========================================================================
- 10/10/2022
01. configure.ac: Fixed leapsecs.dat path
- 05/11/2022
02. digest-md5.c: return incorrect password for invalid arguments
03. pw_comp.c: added documentary comments.

* Thu 08 Sep 2022 03:42:16 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.1-1.1%{?dist}
Release 1.1.1 Start 18/07/2021 End 08/09/2022
======= Release Highlights ================================================
o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
  with re-entrant versions
o Support SCRAM-SHA1, SCRAM-SHA-256, SCRAM-SHA1-PLUS, SCRAM-SHA256-PLUS,
  auth methods
o Converted man pages to markdown for indimail wiki
===========================================================================
- 05/08/2021
01. added r_mkdir function
- 10/07/2021
02. qgetpwgr.c: added qgetserv.. functions to read /etc/services
- 11/07/2021
03. envdir.c: set variables from .envdir first to prevent .envdir from overriding
    main
- 12/07/2021
04. envdir.c: added feature to process .envfile and .envdir as a file
    containing list of directories
- 13/07/2021
05. envdir.c: return directory/filenames in error
- 14/07/2021
06. pathexec.[c,h]: added pathexec_clear() to clear env variables
07. envdir.c: refactored to remove use of chdir to traverse directories.
- 15/07/2021
08. str.h: fixed prototypes (str_chr, str_chrn, str_rchr) use const char '*'
- 16/07/2021
09. envdir.c: treat openreadclose returning 0 as an error
- 17/08/2021
10. configure.ac, qgetpwgr.c: added arpa/inet.h for htons()
- 21/08/2021
11. added no_of_days() function
- 24/08/2021
12. strerr.h, strerr_die.c, strerr_sys.c: added addtional members to struct
    strerr
13. added check_domain() function
- 29/08/2021
14. added noreturn.h for defining noreturn
15. strerr.h: use noreturn instead of __attribute__((noreturn))