@@ -7,6 +7,8 @@ Release 1.1.2 Start 10/10/2021 End --/--/20--
 - 05/11/2022
 02. digest-md5.c: return incorrect password for invalid arguments
 03. pw_comp.c: added documentary comments.
+- 06/12/2022
+04. tcpbind.c: display servicename, hostname in getaddrinfo error
 
 * Thu 08 Sep 2022 03:42:16 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.1-1.1%{?dist}
 Release 1.1.1 Start 18/07/2021 End 08/09/2022
